--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 flask
+SQLAlchemy~=1.3.20
 Flask-SQLAlchemy
 sqlalchemy-utils
--e ../../oso/languages/python/oso
--e ../../oso/languages/python/sqlalchemy-oso
+oso
+sqlalchemy-oso-preview
