Scope create app to module. Use app to instantiate test_db.

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -10,7 +10,11 @@ run:
 	flask run
 
 fixtures:
+	rm -f roles.db
 	FLASK_APP="app:create_app(None, True)" flask run
+
+fmt:
+	black .
 
 test:
 	pytest
