--- a/backends/rails/Makefile
+++ b/backends/rails/Makefile
@@ -1,11 +1,15 @@
-dev:
+dev: .make.bundle-install
 	bundle exec rails s
 
-test-server:
+test-server: .make.bundle-install
 	RAILS_ENV=test bundle exec rails db:migrate
 	RAILS_ENV=test bundle exec rails s
 
-fixtures:
+fixtures: .make.bundle-install
 	bundle exec rails db:seed
+
+.make.bundle-install: Gemfile
+	bundle install
+	touch $@
 
 .PHONY: dev fixtures
