--- a/backends/flask-sqlalchemy/Makefile
+++ b/backends/flask-sqlalchemy/Makefile
@@ -3,25 +3,24 @@ space := $(null) #
 colon := :#
 POLICIES := $(subst ${space},${colon},$(wildcard app/*.polar))
 
-dev:
+dev: .make.requirements-install
 	FLASK_DEBUG=1 FLASK_RUN_EXTRA_FILES="${POLICIES}" flask run --port=5000
 
-run:
+run: .make.requirements-install
 	flask run
 
-fixtures:
+test-server: .make.requirements-install
+	FLASK_APP="app:create_app('sqlite:///test.db', False)" flask run
+
+.make.requirements-install: requirements.txt
+	pip install -r requirements.txt
+	touch $@
+
+fixtures: .make.requirements-install
 	rm -f roles.db
 	FLASK_APP="app:create_app(None, True)" flask run
 
 fmt:
 	black .
 
-test:
-	pytest
-
-# Workaround for testing with a shared declarative base
-# Fixed by: https://github.com/osohq/oso/pull/929
-test_individually:
-	pytest --collect-only | for test in $$(grep -Po '<Function \K[a-z_]*'); do pytest -k $$test ; done
-
-.PHONY: dev run fixtures test
+.PHONY: dev run fixtures
