--- a/backends/express-typeorm/package.json
+++ b/backends/express-typeorm/package.json
@@ -14,6 +14,7 @@
       "cors": "^2.8.5",
       "express": "^4.15.4",
       "reflect-metadata": "^0.1.10",
+      "sql.js": "^1.6.1",
       "sqlite3": "^4.0.3",
       "typeorm": "0.2.32"
    },
