Finish implementing express server.

--- a/backends/express-typeorm/ormconfig.json
+++ b/backends/express-typeorm/ormconfig.json
@@ -3,7 +3,7 @@
    "location": "database.sqlite",
    "autoSave": true,
    "entities": [
-      "src/entity/**/*.ts"
+      "src/entities/**/*.ts"
    ],
    "migrations": [
       "src/migration/**/*.ts"
@@ -12,7 +12,7 @@
       "src/subscriber/**/*.ts"
    ],
    "cli": {
-      "entitiesDir": "src/entity",
+      "entitiesDir": "src/entities",
       "migrationsDir": "src/migration",
       "subscribersDir": "src/subscriber"
    }
