--- a/backends/express-typeorm/package.json
+++ b/backends/express-typeorm/package.json
@@ -13,6 +13,7 @@
       "body-parser": "^1.18.1",
       "cors": "^2.8.5",
       "express": "^4.15.4",
+      "express-session": "^1.17.2",
       "reflect-metadata": "^0.1.10",
       "sql.js": "^1.6.1",
       "sqlite3": "^4.0.3",
