Fix sessions by making them cookies.

--- a/backends/express-typeorm/package.json
+++ b/backends/express-typeorm/package.json
@@ -11,9 +11,10 @@
    },
    "dependencies": {
       "body-parser": "^1.18.1",
+      "cookie-session": "1.4.0",
       "cors": "^2.8.5",
       "express": "^4.15.4",
-      "express-session": "^1.17.2",
+      "oso": "../../../oso/languages/js/",
       "reflect-metadata": "^0.1.10",
       "sql.js": "^1.6.1",
       "sqlite3": "^4.0.3",
