--- a/backends/express-typeorm/fixtures/OrgRoles.yaml
+++ b/backends/express-typeorm/fixtures/OrgRoles.yaml
@@ -3,25 +3,25 @@ items:
   role1:
     user: "@john"
     org: "@beatles"
-    role: "org_owner"
+    role: "owner"
   role2:
     user: "@paul"
     org: "@beatles"
-    role: "org_member"
+    role: "member"
   role3:
     user: "@ringo"
     org: "@beatles"
-    role: "org_member"
+    role: "member"
   role4:
     user: "@mike"
     org: "@monsters"
-    role: "org_owner"
+    role: "owner"
   role5:
     user: "@sully"
     org: "@monsters"
-    role: "org_member"
+    role: "member"
   role6:
     user: "@randall"
     org: "@monsters"
-    role: "org_member"
+    role: "member"
   
