--- a/backends/express-typeorm/package.json
+++ b/backends/express-typeorm/package.json
@@ -5,7 +5,7 @@
    "devDependencies": {
       "@types/node": "^8.0.29",
       "nodemon": "^2.0.7",
-      "ts-node": "3.3.0",
+      "ts-node": "^10.2.1",
       "typeorm-fixtures-cli": "^1.9.1",
       "typescript": "3.3.3333"
    },
@@ -22,6 +22,7 @@
    },
    "scripts": {
       "start": "nodemon src/index.ts",
+      "test-server": "ts-node src/index.ts",
       "fixtures": "fixtures ./fixtures -d --config ./ormconfig.json --sync --require=ts-node/register"
    }
 }
