--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,10 +1,15 @@
-test: test-flask-sqlalchemy test-rails
+TEST_FLAGS :=
+
+test: test-flask-sqlalchemy test-rails test-express-typeorm
+
+test-express-typeorm: .make.requirements-install
+	BACKEND=express-typeorm pytest ${TEST_FLAGS}
 
 test-flask-sqlalchemy: .make.requirements-install
-	BACKEND=flask-sqlalchemy pytest
+	BACKEND=flask-sqlalchemy pytest ${TEST_FLAGS}
 
 test-rails: .make.requirements-install
-	BACKEND=rails pytest
+	BACKEND=rails pytest ${TEST_FLAGS}
 
 fmt: .make.requirements-install
 	black .
