--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,8 @@
 test: test-flask test-flask-sqlalchemy test-rails
 
 # TODO better name
-test-flask: .make.requirements-install
-	BACKEND=flask pytest
+test-flask-sqlalchemy-oso: .make.requirements-install
+	BACKEND=flask-sqlalchemy-oso pytest
 
 test-flask-sqlalchemy: .make.requirements-install
 	BACKEND=flask-sqlalchemy pytest
