new python backend (#18)
* data filtering for rails backend

* pr changes

* new views, tests

* kind of tortured data filtering

* fmt

* rm unneeded import

* update api

* new python backend

* ok

* test backend; check_permission doesn't work, why?

* rm weird extra file

* Relationship -> Relation

* new policy~

* Add flask to makefile.

* some pr changes

* import like normal

* add readme

* rename flask backends

* remove most of the helpers

* remove old helpers

* almost completely remove helpers

* all gone!

* update readme

* so confused about names

* update old readme

* toplevel readme

* black

Co-authored-by: David Hatch <david@osohq.com>
Co-authored-by: Leina McDermott <leina05@gmail.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,6 +1,10 @@
 TEST_FLAGS :=
 
-test: test-flask-sqlalchemy test-rails test-express-typeorm
+test: test-flask-sqlalchemy test-flask-sqlalchemy-oso test-rails test-express-typeorm
+
+# TODO better name
+test-flask-sqlalchemy-oso: .make.requirements-install
+	BACKEND=flask-sqlalchemy-oso pytest
 
 test-express-typeorm: .make.requirements-install
 	BACKEND=express-typeorm pytest ${TEST_FLAGS}
