--- a/backends/flask-sqlalchemy-oso/Makefile
+++ b/backends/flask-sqlalchemy-oso/Makefile
@@ -9,11 +9,21 @@ dev: .make.requirements-install
 run: .make.requirements-install
 	flask run
 
-test-server: .make.requirements-install
+test-server: .make.requirements-test
 	FLASK_APP="app:create_app('sqlite:///test.db', False)" flask run
 
-.make.requirements-install: requirements.txt
+.make.requirements-install: venv-source requirements.txt
 	pip install -r requirements.txt
+	touch $@
+
+venv:
+	python -m venv venv
+
+venv-source: venv
+	. venv/bin/activate
+
+.make.requirements-test: requirements-dev.txt .make.requirements-install venv-source
+	pip install -r requirements-dev.txt
 	touch $@
 
 fixtures: .make.requirements-install
@@ -23,4 +33,4 @@ fixtures: .make.requirements-install
 fmt:
 	black .
 
-.PHONY: dev run fixtures
+.PHONY: dev run fixtures venv-source
