--- a/backends/flask-sqlalchemy/Makefile
+++ b/backends/flask-sqlalchemy/Makefile
@@ -9,21 +9,11 @@ dev: .make.requirements-install
 run: .make.requirements-install
 	flask run
 
-test-server: .make.requirements-test
+test-server: .make.requirements-install
 	FLASK_APP="app:create_app('sqlite:///test.db', False)" flask run
 
-.make.requirements-install: venv-source requirements.txt
+.make.requirements-install: requirements.txt
 	pip install -r requirements.txt
-	touch $@
-
-venv:
-	python3 -m venv venv
-
-venv-source: venv
-	. venv/bin/activate
-
-.make.requirements-test: requirements-dev.txt .make.requirements-install venv-source
-	pip install -r requirements-dev.txt
 	touch $@
 
 fixtures: .make.requirements-install
@@ -33,4 +23,4 @@ fixtures: .make.requirements-install
 fmt:
 	black .
 
-.PHONY: dev run fixtures venv-source
+.PHONY: dev run fixtures
