--- a/backends/rails/Gemfile
+++ b/backends/rails/Gemfile
@@ -13,7 +13,7 @@ gem 'puma', '~> 5.0'
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 gem 'rack-cors'
 
-gem 'oso-oso', '~> 0.20.1.pre.beta', require: 'oso'
+gem 'oso-oso', '~> 0.20.1', require: 'oso'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
