Update POC to use preview branch.

--- a/backends/express-prisma/package.json
+++ b/backends/express-prisma/package.json
@@ -9,7 +9,6 @@
       "@types/node": "^8.0.29",
       "nodemon": "^2.0.7",
       "ts-node": "^10.2.1",
-      "typeorm-fixtures-cli": "^1.9.1",
       "typescript": "3.3.3333"
    },
    "dependencies": {
@@ -18,7 +17,7 @@
       "cookie-session": "1.4.0",
       "cors": "^2.8.5",
       "express": "^4.15.4",
-      "oso": "../../../oso/languages/js/",
+      "oso": "https://github.com/samscott89/oso-node-preview",
       "prisma": "^3.0.2",
       "reflect-metadata": "^0.1.10",
       "sql.js": "^1.6.1",
