Update typeorm policy to use id-based lookups

--- a/backends/express-typeorm/fixtures/Orgs.yaml
+++ b/backends/express-typeorm/fixtures/Orgs.yaml
@@ -3,8 +3,8 @@ items:
   beatles:
     name: "The Beatles"
     billing_address: "64 Penny Ln Liverpool, UK"
-    base_repo_role: "repo_read"
+    base_repo_role: "admin"
   monsters:
     name: "Monsters Inc."
     billing_address: "123 Scarers Rd Monstropolis, USA"
-    base_repo_role: "repo_read"
+    base_repo_role: "admin"
