--- a/backends/rails/oso-service/package.json
+++ b/backends/rails/oso-service/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "express": "^4.17.1",
-    "oso": "^0.24.0"
+    "knex": "^0.95.14",
+    "oso": "^0.24.0",
+    "sqlite3": "^5.0.2"
   }
 }
