Set up caching for complicated polar queries

--- a/backends/rails/oso-service/package.json
+++ b/backends/rails/oso-service/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.1",
     "knex": "^0.95.14",
+    "lodash": "^4.17.21",
     "oso": "^0.25.0",
     "sqlite3": "^5.0.2"
   }
